            - Now behaves gracefully if the given index is out of range.
        Class Cut:
            - New class for describing graph-style cuts on triangulations or
              facet pairings.
        Class Edge<3>:
            - Now specialised (instead of using the generic Face template).
            - New routine linkingSurface().
        Class Example<4>:
            - New routine k3().
            - Reflected the result of cp2() so that it has intersection
              form [1], not [-1].
        Class FacetPairing<dim>:
            - New routine isConnected().
            - New routines canonical() and canonicalAll().
            - New routines for tight encodings and decodings.
            - In findAllPairings(), the action is no longer required to
              take the list of all automorphisms if it does not need them.
            - Renamed toTextRep() to textRep().  The old name is kept as
              a deprecated alias.
            - The IsoList type alias has changed from std::list to std::vector,
              for better performance.
        Class FacetPairing<3>:
            - Routine followChain() now uses ssize_t for the tetrahedron index.
              The old size_t version is still present but deprecated.
        Struct FacetSpec<dim>:
            - New routines for tight encodings and decodings.
        Class HilbertPrimal:
            - The header no longer includes the Normaliz headers (which
              Regina does not actually ship with its development files).
        Class Integer:
            - New tightDecoding() routines.
            - Now supports creation and assignment from long long (both
              signed and unsigned).
        Class IntersectionForm:
            - New class to compute invariants of intersection forms.
        Class Isomorphism<dim>:
            - Replaced apply() with the bracket operator.  The old apply()
              is now a deprecated alias.